--- a/Microcontrollercode/Muziekversterker_v1/Muziekversterker_v1.ioc
+++ b/Microcontrollercode/Muziekversterker_v1/Muziekversterker_v1.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
@@ -9,23 +9,30 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SPI2
 Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IPNb=6
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PB7
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA12
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PA15
+Mcu.Pin14=PB3
+Mcu.Pin15=PB4
+Mcu.Pin16=PB5
+Mcu.Pin17=PB6
+Mcu.Pin18=PB7
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PA5
 Mcu.Pin3=PA7
-Mcu.Pin4=PB10
-Mcu.Pin5=PB15
-Mcu.Pin6=PA8
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PB6
-Mcu.PinsNb=12
+Mcu.Pin4=PB0
+Mcu.Pin5=PB1
+Mcu.Pin6=PB2
+Mcu.Pin7=PB10
+Mcu.Pin8=PB12
+Mcu.Pin9=PB15
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -42,20 +49,50 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.Mode=Synchronous
-PA10.Signal=USART1_RX
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=CS_POT5
+PA12.Locked=true
+PA12.Signal=GPIO_Output
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=CS_POT4
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
-PA8.Mode=Synchronous
-PA8.Signal=USART1_CK
-PA9.Mode=Synchronous
-PA9.Signal=USART1_TX
+PB0.Locked=true
+PB0.Signal=GPXTI0
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=SD_Step_Up
+PB1.Locked=true
+PB1.Signal=GPIO_Output
 PB10.Mode=TX_Only_Simplex_Unidirect_Master
 PB10.Signal=SPI2_SCK
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB15.Mode=TX_Only_Simplex_Unidirect_Master
 PB15.Signal=SPI2_MOSI
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=CS_LEDS
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=CS_POT3
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=CS_POT2
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=CS_POT1
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -92,7 +129,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_USART1_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
@@ -107,7 +144,8 @@ RCC.HCLKFreq_Value=48000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=48000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLM,PLLN,PLLP,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.PLLCLKFreq_Value=48000000
 RCC.PLLM=4
@@ -124,20 +162,19 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=500000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=48000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=24.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI2.CalculateBaudRate=24.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_SYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
