--- a/Microcontrollercode/Muziekversterker_v1/Muziekversterker_v1.ioc
+++ b/Microcontrollercode/Muziekversterker_v1/Muziekversterker_v1.ioc
@@ -40,6 +40,7 @@ MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -65,6 +66,8 @@ PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
 PA7.Signal=SPI1_MOSI
+PB0.GPIOParameters=GPIO_ModeDefaultEXTI
+PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
 PB0.Locked=true
 PB0.Signal=GPXTI0
 PB1.GPIOParameters=GPIO_Label
