--- a/Microcontrollercode/Muziekversterker_v1/Muziekversterker_v1.ioc
+++ b/Microcontrollercode/Muziekversterker_v1/Muziekversterker_v1.ioc
@@ -14,25 +14,26 @@ Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PA12
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PA15
-Mcu.Pin14=PB3
-Mcu.Pin15=PB4
-Mcu.Pin16=PB5
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PA5
-Mcu.Pin3=PA7
-Mcu.Pin4=PB0
-Mcu.Pin5=PB1
-Mcu.Pin6=PB2
-Mcu.Pin7=PB10
-Mcu.Pin8=PB12
-Mcu.Pin9=PB15
-Mcu.PinsNb=20
+Mcu.Pin10=PB15
+Mcu.Pin11=PA12
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PA15
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
+Mcu.Pin2=PA2
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin3=PA5
+Mcu.Pin4=PA7
+Mcu.Pin5=PB0
+Mcu.Pin6=PB1
+Mcu.Pin7=PB2
+Mcu.Pin8=PB10
+Mcu.Pin9=PB12
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -62,6 +63,10 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=CS_POT4
 PA15.Locked=true
 PA15.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=touch_reset
+PA2.Locked=true
+PA2.Signal=GPIO_Output
 PA5.Mode=TX_Only_Simplex_Unidirect_Master
 PA5.Signal=SPI1_SCK
 PA7.Mode=TX_Only_Simplex_Unidirect_Master
@@ -132,7 +137,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
